# Forph

./: CONTRIBUTING.md  DropForge Brainstorm.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  macos-bundle.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: BatchPanel.tsx  CompressOptions.tsx  Converting.tsx  DependencySection.tsx  DropZone.tsx  FileActions.tsx  GifOptions.tsx  ImageOptions.tsx  ResultPanel.tsx  TranscriptionPreferences.tsx
src/components/batch/: BatchProgressView.tsx  BatchResultView.tsx  BatchSelectionView.tsx  batchState.ts
src/lib/: actionIds.ts  actions.ts  commands.ts  errors.ts  format.ts  transcription.ts  types.ts
