[package]
name = "forph"
version = "0.1.0"
description = "Forph - Local file conversion tool"
authors = ["Fang"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
log = "0.4"
